# Snap7Sucks

./: CMakeLists.txt  README.md  main.cpp  test.cpp
lib/: snap7.lib
